Upgrading dependencies version to match proto
Made changes to dependencies for recent bazel-deps
Corrected for grpc change erroring on unused Context attach return value

--- a/3rdparty/jvm/commons_codec/BUILD
+++ b/3rdparty/jvm/commons_codec/BUILD
@@ -1,11 +1,9 @@
 java_library(
     name = "commons_codec",
-    exports = [
-        "//external:jar/commons_codec/commons_codec"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/commons_codec/commons_codec",
+    ],
 )
-
-
