--- a/3rdparty/jvm/junit/BUILD
+++ b/3rdparty/jvm/junit/BUILD
@@ -1,14 +1,12 @@
 java_library(
     name = "junit",
+    visibility = [
+        "//3rdparty/jvm:__subpackages__",
+    ],
     exports = [
-        "//external:jar/junit/junit"
+        "//external:jar/junit/junit",
     ],
     runtime_deps = [
-        "//3rdparty/jvm/org/hamcrest:hamcrest_core"
+        "//3rdparty/jvm/org/hamcrest:hamcrest_core",
     ],
-    visibility = [
-        "//visibility:public"
-    ]
 )
-
-
