--- a/3rdparty/jvm/org/checkerframework/BUILD
+++ b/3rdparty/jvm/org/checkerframework/BUILD
@@ -1,11 +1,9 @@
 java_library(
     name = "checker_compat_qual",
-    exports = [
-        "//external:jar/org/checkerframework/checker_compat_qual"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/org/checkerframework/checker_compat_qual",
+    ],
 )
-
-
