--- a/3rdparty/jvm/com/fasterxml/jackson/core/BUILD
+++ b/3rdparty/jvm/com/fasterxml/jackson/core/BUILD
@@ -1,11 +1,9 @@
 java_library(
     name = "jackson_core",
-    exports = [
-        "//external:jar/com/fasterxml/jackson/core/jackson_core"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/com/fasterxml/jackson/core/jackson_core",
+    ],
 )
-
-
