--- a/3rdparty/jvm/com/google/j2objc/BUILD
+++ b/3rdparty/jvm/com/google/j2objc/BUILD
@@ -1,11 +1,9 @@
 java_library(
     name = "j2objc_annotations",
-    exports = [
-        "//external:jar/com/google/j2objc/j2objc_annotations"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/com/google/j2objc/j2objc_annotations",
+    ],
 )
-
-
