--- a/3rdparty/jvm/com/squareup/okio/BUILD
+++ b/3rdparty/jvm/com/squareup/okio/BUILD
@@ -1,11 +1,9 @@
 java_library(
     name = "okio",
-    exports = [
-        "//external:jar/com/squareup/okio/okio"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/com/squareup/okio/okio",
+    ],
 )
-
-
