--- a/3rdparty/jvm/io/netty/BUILD
+++ b/3rdparty/jvm/io/netty/BUILD
@@ -1,153 +1,159 @@
 java_library(
     name = "netty_buffer",
+    visibility = [
+        "//3rdparty/jvm:__subpackages__",
+    ],
     exports = [
-        "//external:jar/io/netty/netty_buffer"
+        "//external:jar/io/netty/netty_buffer",
     ],
     runtime_deps = [
-        ":netty_common"
+        ":netty_common",
     ],
-    visibility = [
-        "//visibility:public"
-    ]
 )
-
-
 
 java_library(
     name = "netty_codec",
-    exports = [
-        "//external:jar/io/netty/netty_codec"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/io/netty/netty_codec",
+    ],
+    runtime_deps = [
+        ":netty_buffer",
+        ":netty_common",
+        ":netty_transport",
+    ],
 )
-
-
 
 java_library(
     name = "netty_codec_http",
-    exports = [
-        "//external:jar/io/netty/netty_codec_http"
-    ],
-    runtime_deps = [
-        ":netty_codec"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
-)
-
-
-
-java_library(
-    name = "netty_codec_http2",
-    exports = [
-        "//external:jar/io/netty/netty_codec_http2"
+        "//3rdparty/jvm:__subpackages__",
     ],
-    runtime_deps = [
-        ":netty_codec_http",
-        ":netty_handler"
-    ],
-    visibility = [
-        "//visibility:public"
-    ]
-)
-
-
-
-java_library(
-    name = "netty_codec_socks",
     exports = [
-        "//external:jar/io/netty/netty_codec_socks"
-    ],
-    visibility = [
-        "//visibility:public"
-    ]
-)
-
-
-
-java_library(
-    name = "netty_common",
-    exports = [
-        "//external:jar/io/netty/netty_common"
-    ],
-    visibility = [
-        "//visibility:public"
-    ]
-)
-
-
-
-java_library(
-    name = "netty_handler",
-    exports = [
-        "//external:jar/io/netty/netty_handler"
+        "//external:jar/io/netty/netty_codec_http",
     ],
     runtime_deps = [
         ":netty_buffer",
         ":netty_codec",
-        ":netty_transport"
+        ":netty_common",
+        ":netty_handler",
+        ":netty_transport",
     ],
-    visibility = [
-        "//visibility:public"
-    ]
 )
 
+java_library(
+    name = "netty_codec_http2",
+    visibility = [
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/io/netty/netty_codec_http2",
+    ],
+    runtime_deps = [
+        ":netty_buffer",
+        ":netty_codec",
+        ":netty_codec_http",
+        ":netty_common",
+        ":netty_handler",
+        ":netty_transport",
+    ],
+)
 
+java_library(
+    name = "netty_codec_socks",
+    visibility = [
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/io/netty/netty_codec_socks",
+    ],
+    runtime_deps = [
+        ":netty_buffer",
+        ":netty_codec",
+        ":netty_common",
+        ":netty_transport",
+    ],
+)
+
+java_library(
+    name = "netty_common",
+    visibility = [
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/io/netty/netty_common",
+    ],
+)
+
+java_library(
+    name = "netty_handler",
+    visibility = [
+        "//visibility:public",
+    ],
+    exports = [
+        "//external:jar/io/netty/netty_handler",
+    ],
+    runtime_deps = [
+        ":netty_buffer",
+        ":netty_codec",
+        ":netty_transport",
+    ],
+)
 
 java_library(
     name = "netty_handler_proxy",
+    visibility = [
+        "//3rdparty/jvm:__subpackages__",
+    ],
     exports = [
-        "//external:jar/io/netty/netty_handler_proxy"
+        "//external:jar/io/netty/netty_handler_proxy",
     ],
     runtime_deps = [
+        ":netty_buffer",
+        ":netty_codec",
+        ":netty_codec_http",
         ":netty_codec_socks",
-        ":netty_transport"
+        ":netty_common",
+        ":netty_transport",
     ],
-    visibility = [
-        "//visibility:public"
-    ]
 )
-
-
 
 java_library(
     name = "netty_resolver",
-    exports = [
-        "//external:jar/io/netty/netty_resolver"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/io/netty/netty_resolver",
+    ],
+    runtime_deps = [
+        ":netty_common",
+    ],
 )
-
-
 
 java_library(
     name = "netty_tcnative_boringssl_static",
-    exports = [
-        "//external:jar/io/netty/netty_tcnative_boringssl_static"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//visibility:public",
+    ],
+    exports = [
+        "//external:jar/io/netty/netty_tcnative_boringssl_static",
+    ],
 )
-
-
 
 java_library(
     name = "netty_transport",
+    visibility = [
+        "//3rdparty/jvm:__subpackages__",
+    ],
     exports = [
-        "//external:jar/io/netty/netty_transport"
+        "//external:jar/io/netty/netty_transport",
     ],
     runtime_deps = [
-        ":netty_resolver"
+        ":netty_buffer",
+        ":netty_common",
+        ":netty_resolver",
     ],
-    visibility = [
-        "//visibility:public"
-    ]
 )
-
-
