--- a/3rdparty/jvm/org/apache/httpcomponents/BUILD
+++ b/3rdparty/jvm/org/apache/httpcomponents/BUILD
@@ -1,28 +1,24 @@
 java_library(
     name = "httpclient",
+    visibility = [
+        "//3rdparty/jvm:__subpackages__",
+    ],
     exports = [
-        "//external:jar/org/apache/httpcomponents/httpclient"
+        "//external:jar/org/apache/httpcomponents/httpclient",
     ],
     runtime_deps = [
-        "//3rdparty/jvm/commons_codec:commons_codec",
-        "//3rdparty/jvm/commons_logging:commons_logging",
-        ":httpcore"
+        ":httpcore",
+        "//3rdparty/jvm/commons_codec",
+        "//3rdparty/jvm/commons_logging",
     ],
-    visibility = [
-        "//visibility:public"
-    ]
 )
-
-
 
 java_library(
     name = "httpcore",
-    exports = [
-        "//external:jar/org/apache/httpcomponents/httpcore"
-    ],
     visibility = [
-        "//visibility:public"
-    ]
+        "//3rdparty/jvm:__subpackages__",
+    ],
+    exports = [
+        "//external:jar/org/apache/httpcomponents/httpcore",
+    ],
 )
-
-
