--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -28,6 +28,10 @@ dependencies:
       version: "1.72"
 
   com.google.auth:
+    google-auth-library-credentials:
+      lang: java
+      version: "0.9.0"
+
     google-auth-library-oauth2-http:
       lang: java
       version: "0.9.0"
@@ -47,10 +51,19 @@ dependencies:
       lang: java
       version: "1.1"
 
+  com.google.code.findbugs:
+    jsr305:
+      lang: java
+      version: "3.0.1"
+
   com.google.protobuf:
     protobuf-java:
       lang: java
-      version: "3.5.1"
+      version: "3.9.1"
+
+    protobuf-java-util:
+      lang: java
+      version: "3.9.1"
 
   com.google.truth:
     truth:
@@ -60,7 +73,12 @@ dependencies:
   io.grpc:
     grpc-all:
       lang: java
-      version: "1.9.0"
+      version: "1.20.0"
+
+    grpc:
+      lang: java
+      modules: [ "auth", "core", "context", "netty", "stub", "protobuf" ]
+      version: "1.20.0"
 
   io.netty:
     netty:
