--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -88,3 +88,8 @@ dependencies:
     netty-tcnative-boringssl-static:
       lang: java
       version: "2.0.7.Final"
+
+  javax.annotation:
+    javax.annotation-api:
+      lang: java
+      version: "1.3.2"
