Remove REAPI v1test message manipulation
Create a MODULE.bazel to bring us up to recent bazel versions

--- a/src/main/proto/BUILD
+++ b/src/main/proto/BUILD
@@ -5,11 +5,9 @@ proto_library(
     srcs = ["remote_execution_log.proto"],
     deps = [
         "@com_google_protobuf//:timestamp_proto",
-        "@googleapis//:google_bytestream_bytestream_proto",
-        "@googleapis//:google_devtools_remoteexecution_v1test_remote_execution_proto",
-        "@googleapis//:google_longrunning_operations_proto",
-        "@googleapis//:google_rpc_status_proto",
-        "@googleapis//:google_watch_v1_proto",
+        "@googleapis//google/bytestream:bytestream_proto",
+        "@googleapis//google/longrunning:operations_proto",
+        "@googleapis//google/rpc:status_proto",
         "@remoteapis//build/bazel/remote/execution/v2:remote_execution_proto",
     ],
 )
