Upgrade bazel_remote_apis dependency

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -42,13 +42,13 @@ bazel_dep(
 )
 
 # TODO: remove this after https://github.com/bazelbuild/remote-apis/pull/293 is merged
-bazel_dep(name = "remoteapis", version = "eb433accc6a666b782ea4b787eb598e5c3d27c93")
+bazel_dep(name = "bazel_remote_apis", version = "536ec595e1df0064bb37aecc95332a661b8c79b2")
 archive_override(
-    module_name = "remoteapis",
-    integrity = "sha256-68wzxNAkPZ49/zFwPYQ5z9MYbgxoeIEazKJ24+4YqIQ=",
-    strip_prefix = "remote-apis-eb433accc6a666b782ea4b787eb598e5c3d27c93",
+    module_name = "bazel_remote_apis",
+    integrity = "sha256-vkbz/qTr+h+lV4+7sIzPL1snDxTYs99Lt2rsV5/l7TQ=",
+    strip_prefix = "remote-apis-536ec595e1df0064bb37aecc95332a661b8c79b2",
     urls = [
-        "https://github.com/bazelbuild/remote-apis/archive/eb433accc6a666b782ea4b787eb598e5c3d27c93.zip",
+        "https://github.com/bazelbuild/remote-apis/archive/536ec595e1df0064bb37aecc95332a661b8c79b2.zip",
     ],
 )
 
